<resources>
    <string name="app_name">MobileCafe</string>
    <string name="action_settings">View order</string>
    <string name="add_to_order">Add to order?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="order_updated">Order updated!</string>
    <string name="cart_string">Your cart: </string>
    <string name="total_price">Total price: </string>
    <string name="latitude">Latitude: </string>
    <string name="longtitude">Longtitude: </string>
    <string name="get_location">Get location</string>
    <string name="accept_order">Accept order</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="journey">Imagine that you went on a magical journey through all that banking stuff and your order is done!</string>
</resources>
