<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddToOrderActivity"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        android:padding="@dimen/big_padding"
        android:gravity="center_horizontal"
        android:textSize="@dimen/big_font"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/product_name_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"/>
        <TextView
            android:id="@+id/product_size_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"/>
        <TextView
            android:id="@+id/product_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_no"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_no"
            android:textColor="@color/white"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/button_yes"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:text="@string/button_yes" />
    </LinearLayout>

</LinearLayout>